--- a/README
+++ b/README
@@ -4,6 +4,18 @@ This package creates an Emacs interface for Uzbl, allowing you to control Uzbl
 from within Emacs.
 
 It requires Uzbl (www.uzbl.org), as well as a patched version of Emacs which
-supports embedding xwidgets, available at http://github.com/jave/emacs/tree/xembed
+supports embedding xwidgets, available at
+http://github.com/jave/emacs/tree/xembed
+
+Installation
+------------
+
+Move the file "ezbl.el" to somewhere in your load-path, and move the script
+"handler.py" to the same directory as ezbl.el. You can also set the variable
+`ezbl-handler-path' to the path of the "handler.py" file, though it defaults to
+looking for a file called "handler.py" in the same directory as "ezbl.el".
+
+Add "(require 'ezbl)" to your .emacs file, and run "ezbl-open" to launch a Uzbl
+instance.
 
 Copyright 2009, Daniel Hackney
